Keep working on custom validation